--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "google-map-react": "^2.1.10",
     "i18next": "^20.4.0",
     "leaflet": "^1.7.1",
+    "lodash": "^4.17.21",
     "patch-package": "^6.4.7",
     "pigeon-maps": "^0.19.7",
     "postinstall-postinstall": "^2.1.0",
