--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": "https://github.com/altence/lightence-admin/issues"
   },
   "dependencies": {
+    "@ant-design/charts": "^1.4.2",
     "@ant-design/icons": "^4.6.2",
     "@craco/craco": "^6.1.2",
     "@reduxjs/toolkit": "^1.7.1",
@@ -30,7 +31,7 @@
     "patch-package": "^6.4.7",
     "pigeon-maps": "^0.19.7",
     "postinstall-postinstall": "^2.1.0",
-    "react": "^17.0.2",
+    "react": "18.0.0",
     "react-country-flag": "^3.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
