--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ant-design/icons": "^4.6.2",
     "@craco/craco": "^6.1.2",
     "@reduxjs/toolkit": "^1.7.1",
+    "@types/lodash": "^4.14.200",
     "antd": "^4.22.4",
     "antd-mask-input": "^0.1.15",
     "axios": "^0.24.0",
