--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ant-design/charts": "^1.4.2",
     "@ant-design/icons": "^4.6.2",
+    "@ant-design/pro-table": "^3.13.9",
     "@craco/craco": "^6.1.2",
     "@reduxjs/toolkit": "^1.7.1",
     "@types/lodash": "^4.14.200",
