--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "patch-package": "^6.4.7",
     "pigeon-maps": "^0.19.7",
     "postinstall-postinstall": "^2.1.0",
+    "rc-picker": "^4.3.0",
     "react": "^17.0.2",
     "react-country-flag": "^3.0.2",
     "react-dom": "^17.0.2",
