--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ant-design/pro-table": "^3.13.9",
     "@craco/craco": "^6.1.2",
     "@reduxjs/toolkit": "^1.7.1",
+    "@tanstack/react-query": "4",
     "@types/lodash": "^4.14.200",
     "antd": "^4.22.4",
     "antd-mask-input": "^0.1.15",
