--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-scripts": "4.0.3",
     "react-simple-maps": "^2.3.0",
     "react-slick": "^0.28.1",
+    "react-sticky-box": "^2.0.5",
     "react-trello": "^2.2.11",
     "react-verification-input": "^2.0.3",
     "slick-carousel": "^1.8.1",
